немношко причесали фронтенд

--- a/Domiki/ClientApp/src/custom.css
+++ b/Domiki/ClientApp/src/custom.css
@@ -1,14 +1,35 @@
 /* Provide sufficient contrast against white background */
 a {
-  color: #0366d6;
+    color: #0366d6;
 }
 
 code {
-  color: #E01A76;
+    color: #E01A76;
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+    color: #fff;
+    background-color: #1b6ec2;
+    border-color: #1861ac;
+}
+
+.domiks {
+    display: flex;
+}
+
+.domik-box {
+    display: flex;
+    flex-wrap: wrap;
+    width: 128px;
+}
+
+    .domik-box .domik-level {
+        position: absolute;
+        background: green;
+        color: white;
+        padding: 0 5px;
+    }
+
+.purchase-box{
+    margin-top: 40px;
 }
