--- a/Domiki/ClientApp/src/custom.css
+++ b/Domiki/ClientApp/src/custom.css
@@ -13,6 +13,13 @@ code {
     border-color: #1861ac;
 }
 
+.break {
+    flex-basis: 100%;
+    height: 0;
+}
+
+
+
 .domiks {
     display: flex;
 }
@@ -24,7 +31,7 @@ code {
     }
 
         .domiks .domik-box .domik-level {
-            position: absolute;
+            /* position: absolute;*/
             background: green;
             color: white;
             padding: 0 5px;
@@ -54,3 +61,7 @@ code {
             max-width: 32px;
             max-height: 32px;
         }
+
+.upgrade-box {
+    padding-bottom: 10px;
+}
